--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,7 +7,7 @@
         <span class="nav_logo_text">{% trans "Capacity Exchange" %}</span>
     </a>
     <div class="nav_section menu_links">
-        <a href="{% url 'homepage' %}">{% trans "Skills" %}</a>
+        <a href="{% url 'skill_list' %}">{% trans "Skills" %}</a>
         <a href="{% url 'homepage' %}">{% trans "Profile" %}</a>
         <a href="{% url 'homepage' %}">{% trans "Feedback" %}</a>
         <div class="search-container">
