--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,8 +11,8 @@
         <a href="{% url 'homepage' %}">{% trans "Profile" %}</a>
         <a href="{% url 'homepage' %}">{% trans "Feedback" %}</a>
         <div class="search-container">
-            <form>
-                <input type="text" placeholder="Search.." name="search">
+            <form action="{% url 'search' %}" method="get">
+                <input type="text" placeholder="Search.." name="query">
                 <button class="nav_search_btn">
                     <img class="nav_search_icon" src="{% static 'images/magnifying-glass-solid.svg' %}" alt="{% trans 'Search in Capacity Exchange' %}" aria-label="{% trans 'Search in Capacity Exchange' %}">
                 </button>
