--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
     </a>
     <div class="nav_section menu_links">
         <a href="{% url 'skill_list' %}">{% trans "Skills" %}</a>
-        <a href="{% url 'homepage' %}">{% trans "Profile" %}</a>
+        <a href="{% url 'profile' %}">{% trans "Profile" %}</a>
         <a href="{% url 'homepage' %}">{% trans "Feedback" %}</a>
         <div class="search-container">
             <form action="{% url 'search' %}" method="get">
