--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -7,12 +7,24 @@
 {% block styles %}<link rel="stylesheet" type="text/css" href="{% static 'css/forms.css' %}">{% endblock %}
 
 {% block content %}
-    
-<h1>Profile</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-</form>
+
+<div class="w3-row-padding w3-content" style="max-width:800px">
+    <div class="w3-container w3-margin-top">
+        <div class="w3-container">
+            <h1>{% trans "Profile" %}</h1>
+        </div>
+    </div>
+    <div class="w3-margin-top w3-section">
+        <div class="w3-container">
+            <form method="post">
+                {% csrf_token %}
+                <div class="w3-section">
+                    {{ form.as_div }}
+                    <button type="submit">Save</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
