--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -18,7 +18,7 @@
         <div class="w3-container">
             <form method="post">
                 {% csrf_token %}
-                <div class="w3-section">
+                <div class="w3-section formfield">
                     {{ form.as_div }}
                     <button type="submit">Save</button>
                 </div>
