--- a/templates/bugs/register_bug.html
+++ b/templates/bugs/register_bug.html
@@ -1,6 +1,15 @@
+{% extends "base.html" %}
+{% load static %}
+{% load i18n %}
+
+{% block title %}{% trans "Homepage" %}{% endblock %}
+
+{% block content %}
 <h1>Create Bug Page</h1>
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Report New Bug</button>
 </form>
+
+{% endblock %}
