--- a/templates/bugs/index.html
+++ b/templates/bugs/index.html
@@ -15,3 +15,11 @@
 </ul>
 {% endblock %}
 
+{#<h1>Bug List</h1>#}
+{#<ul>#}
+{#    {% for bug in bug_list%}#}
+{##}
+{#    <li><a href="{% url 'bug:bug_detail' bug.id %}">{{ bug.description }}</a></li>#}
+{##}
+{#    {% endfor %}#}
+{#</ul>#}
